# chartlyrics

./: .gitignore  README.md  pyproject.toml  version.sh
.circleci/: config.yml
chartlyrics/: __init__.py  __main__.py  client.py  lyrics.py
tests/: test_chartlyrics.py
