[tool.poetry]
name = "chartlyrics"
version = "0.1.1"
description = "Wrapper for chartlyrics api: http://api.chartlyrics.com"
authors = ["matheusfillipe <matheusfillipeag@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matheusfillipe/chartlyrics"
homepage = "https://github.com/matheusfillipe/chartlyrics"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
